// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create test cases for filteringcontent component where the content is of type string Create a snapshot case 1`] = `
<DocumentFragment>
  <div
    class="filteringContent"
  >
    <p
      class="mainFilteringContentTitle"
      data-testid="Languages"
    >
      Languages
    </p>
    <div
      class="checkedContentClass"
    >
      <img
        alt="logo"
        src="CategoriesUnchecked.svg"
      />
      <p>
        French
      </p>
    </div>
    <div
      class="checkedContentClass"
    >
      <img
        alt="logo"
        src="CategoriesUnchecked.svg"
      />
      <p>
        English
      </p>
    </div>
    <div
      class="checkedContentClass"
    >
      <img
        alt="logo"
        src="CategoriesUnchecked.svg"
      />
      <p>
        Arabic
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Create test cases where the content element is of type object Create a snapshot case 1`] = `
<DocumentFragment>
  <div
    class="filteringContent"
  >
    <p
      class="mainFilteringContentTitle"
      data-testid="Category"
    >
      Category
    </p>
    <div
      class="filteringSubContent"
    >
      <p
        class="filteringSubContentTitle"
        data-testid="JS"
      >
        JS
      </p>
      <div
        class="checkedContentClass"
      >
        <img
          alt="logo"
          src="CategoriesUnchecked.svg"
        />
        <p>
          React
        </p>
      </div>
      <div
        class="checkedContentClass"
      >
        <img
          alt="logo"
          src="CategoriesUnchecked.svg"
        />
        <p>
          Angular
        </p>
      </div>
      <div
        class="checkedContentClass"
      >
        <img
          alt="logo"
          src="CategoriesUnchecked.svg"
        />
        <p>
          Vue Js
        </p>
      </div>
    </div>
    <div
      class="filteringSubContent"
    >
      <p
        class="filteringSubContentTitle"
        data-testid="Android"
      >
        Android
      </p>
      <div
        class="checkedContentClass"
      >
        <img
          alt="logo"
          src="CategoriesUnchecked.svg"
        />
        <p>
          Java
        </p>
      </div>
      <div
        class="checkedContentClass"
      >
        <img
          alt="logo"
          src="CategoriesUnchecked.svg"
        />
        <p>
          Kotlin
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
